<resources>
    <string name="app_name">DownTube</string>
    <string name="url_input">Enter Url Here</string>
    <string name="search">Search</string>
    <string name="video">Download Video</string>
    <string name="audio">Download Audio</string>
    <string name="instructions">How To Use\n1. Copy Link From YouTube/Other Sites\n2. Paste Link In Above Box\n3. Download Video/Audio</string>
    <string name="coffie">Buy Me A Coffee</string>
    <string name="credits">DownTube 2.0\n"A Shiv's Hack Production"</string>
    <string name="back">Press Back Again To Exit</string>
    <string name="license">All Icons Reserved Under Apache Version 2.0 License</string>
    <string name="paytm">Donation Based On PayTm</string>
    <string name="oneCoffee">1 Coffee\t\u20B9 5 </string>
    <string name="twoCoffee">2 Coffees\t\u20B9 10 </string>
    <string name="tenCoffee">10 Coffees\t\u20B9 50 </string>
    <string name="fiftyCoffee">50 Coffees\t\u20B9 500</string>
    <string name="paypal">Use Paypal</string>
</resources>